--- a/.github/workflows/dockerPush.yml
+++ b/.github/workflows/dockerPush.yml
@@ -1,33 +1,33 @@
 name: Docker push
-  on:
-    workflow_dispatch:
+on:
+  workflow_dispatch:
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: checkout
-          uses: actions/checkout@v2
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
 
-        - name: set up JDK 11
-          uses: actions/setup-java@v2
-          with:
-            distribution: 'adopt'
-            java-version: '11'
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
 
-        - name: Build jar
-          run: mvn clean install
+      - name: Build jar
+        run: mvn clean install
 
-        - name: Docker login
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKERHUB_NAME }}
-            password: ${{ secrets.DOCKERHUB_KEY }}
+      - name: Docker login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_NAME }}
+          password: ${{ secrets.DOCKERHUB_KEY }}
 
-        - name: Build and push
-          uses: docker/build-push-action@v2
-          with:
-            context: .
-            push: true
-            tags: ${{ secrets.DOCKERHUB_NAME }}/go-north:latest
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_NAME }}/qr-reader:latest
