--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
 # Database
-spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/
+spring.datasource.url=${SPRING_DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL-AUTO}
 
 # Docker run commands for postgres server
 # docker run --name postgresdb -e POSTGRES_DB=school -e POSTGRES_PASSWORD=password -p 5432:5432 -d postgres:alpine
