--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   postgres-db:
     image: postgres:alpine
-    container_name: step_database
+    container_name: qr_reader_database_local
     ports:
       - 5432:5432
     environment:
@@ -10,8 +10,8 @@ services:
       POSTGRES_PASSWORD: password123
 
   spring_app:
-    image: patrikjmelander/go-north:latest
-    container_name: GoNorth
+    image: patrikjmelander/qr-reader:latest
+    container_name: QR Reader
     ports:
       - 8080:8080
     environment:
